--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Dan Quinn",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.2",
     "bluebird": "^2.9.24",
     "express": "^4.12.3",
     "jade": "^1.9.2",
     "mongoose": "^4.0.2",
+    "node-uuid": "^1.4.3",
     "nodemailer": "^1.3.4",
     "socket.io": "^1.3.5",
     "striptags": "^2.0.2"
