--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Chill in the lounge.",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,11 +13,13 @@
   "author": "Dan Quinn",
   "license": "ISC",
   "dependencies": {
+    "autolinker": "^0.17.1",
     "bcrypt": "^0.8.2",
     "bluebird": "^2.9.24",
     "express": "^4.12.3",
     "jade": "^1.9.2",
     "mongoose": "^4.0.2",
+    "mysql": "^2.6.2",
     "node-uuid": "^1.4.3",
     "nodemailer": "^1.3.4",
     "socket.io": "^1.3.5",
