--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-uuid": "^1.4.3",
     "nodemailer": "^1.3.4",
     "socket.io": "^1.3.5",
-    "striptags": "^2.0.2"
+    "striptags": "^2.0.2",
+    "winston": "^1.0.0"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
