--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babelify": "^6.1.2",
     "browserify": "^9.0.8",
     "gulp": "^3.8.11",
+    "mocha": "^2.2.5",
     "vinyl-source-stream": "^1.1.0"
   }
 }
