--- a/package.json
+++ b/package.json
@@ -13,24 +13,20 @@
   "author": "Dan Quinn",
   "license": "ISC",
   "dependencies": {
-    "autolinker": "^0.17.1",
-    "bcrypt": "^0.8.2",
-    "bluebird": "^2.9.24",
-    "express": "^4.12.3",
-    "jade": "^1.9.2",
-    "mongoose": "^4.0.2",
-    "mysql": "^2.6.2",
-    "node-uuid": "^1.4.3",
-    "nodemailer": "^1.3.4",
-    "socket.io": "^1.3.5",
-    "striptags": "^2.0.2",
-    "winston": "^1.0.0"
+    "autolinker": "^0.27.0",
+    "bcrypt": "^0.8.7",
+    "bluebird": "^3.4.1",
+    "express": "^4.14.0",
+    "jade": "^1.11.0",
+    "mongoose": "^4.5.2",
+    "mysql": "^2.11.1",
+    "node-uuid": "^1.4.7",
+    "nodemailer": "^2.4.2",
+    "socket.io": "^1.4.8",
+    "striptags": "^2.1.1",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
-    "babelify": "^6.1.2",
-    "browserify": "^9.0.8",
-    "gulp": "^3.8.11",
-    "mocha": "^2.2.5",
-    "vinyl-source-stream": "^1.1.0"
+    "mocha": "^2.2.5"
   }
 }
